[package]
name = "bloggers"
version = "0.0.0"
edition = "2021"
description = "A pure-rust static content generation library for blog posts"
authors = ["Folling <coding@folling.de>"]
repository = "https://github.com/folling/bloggers"
license = "BSD-3-Clause"
keywords = [
    "web",
    "blogging",
    "generation",
]
categories = [
    "web-programming",
]
readme = "README.md"

[dependencies]
anyhow = "1.0.55"
env_logger = { version="0.9.0", default-features = false, features = ["termcolor", "humantime", "atty"] }
log = "0.4.14"
nom = "7.1.1"
